fix: container align

--- a/pages/authentication-pages/login.css
+++ b/pages/authentication-pages/login.css
@@ -17,7 +17,8 @@
     height: 70vh;
     border: 1px solid;
     width: 25rem;
-    margin-left: 30rem;
+    margin-left: auto;
+    margin-right: auto;
     border: none;
     box-shadow: var(--box-shadow);
     padding-left: 2rem;
